Corrects spacing, adds text

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -48,12 +48,19 @@ body{
     box-shadow: 0.5em 0.5em grey;
   }
 
+  .card-body {
+    width: 8rm;
+  }
+
   ul.list-group.col{
     padding-right:0;
     margin:1rem;
   }
   textarea {
     resize: none;
+    opacity: 0.7;
+    background: transparent;
+    color: transparent;
  }
 }
 
